// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`constructing state and basic tests should create with given values 1`] = `
State {
  "_elementTable": Map {
    "n1" => Object {
      "attributes": Object {
        "changeset": undefined,
        "timestamp": undefined,
        "uid": undefined,
        "user": undefined,
        "version": undefined,
        "visible": undefined,
      },
      "id": "n1",
      "loc": Object {
        "lat": 0,
        "lon": 0,
      },
      "tags": Object {},
      "type": "node",
    },
    "n2" => Object {
      "attributes": Object {
        "changeset": undefined,
        "timestamp": undefined,
        "uid": undefined,
        "user": undefined,
        "version": undefined,
        "visible": undefined,
      },
      "id": "n2",
      "loc": Object {
        "lat": 0,
        "lon": 0,
      },
      "tags": Object {},
      "type": "node",
    },
    "w1" => Object {
      "attributes": Object {
        "changeset": undefined,
        "timestamp": undefined,
        "uid": undefined,
        "user": undefined,
        "version": undefined,
        "visible": undefined,
      },
      "id": "w1",
      "nodes": Array [
        "n1",
        "n2",
      ],
      "tags": Object {},
      "type": "way",
    },
  },
  "_quadkeysTable": Map {
    "123" => Set {
      "n1",
      "n2",
      "w1",
    },
  },
}
`;

exports[`shred shouldnt change existing state 1`] = `
State {
  "_elementTable": Map {
    "w3" => Object {
      "attributes": Object {
        "changeset": undefined,
        "timestamp": undefined,
        "uid": undefined,
        "user": undefined,
        "version": undefined,
        "visible": undefined,
      },
      "id": "w3",
      "nodes": Array [
        "n3",
        "n4",
        "n5",
      ],
      "tags": Object {},
      "type": "way",
    },
    "r2" => Object {
      "attributes": Object {
        "changeset": undefined,
        "timestamp": undefined,
        "uid": undefined,
        "user": undefined,
        "version": undefined,
        "visible": undefined,
      },
      "id": "r2",
      "members": Array [
        Object {
          "id": "w1",
          "ref": "w1",
        },
        Object {
          "id": "w3",
          "ref": "w3",
        },
        Object {
          "id": "n6",
          "ref": "n6",
        },
      ],
      "tags": Object {},
      "type": "relation",
    },
  },
  "_quadkeysTable": Map {
    "100231121" => Set {
      "w3",
      "r2",
    },
  },
}
`;
